# RustOctopus

./: .gitignore  Cargo.toml  LICENSE  README.md
bridge/: package-lock.json  package.json
bridge/src/: index.ts  whatsapp.ts
crates/nanobot-cli/: Cargo.toml
crates/nanobot-cli/src/: cmd_agent.rs  cmd_cron.rs  cmd_gateway.rs  cmd_onboard.rs  cmd_status.rs  main.rs
crates/nanobot-cli/tests/: cli_integration.rs
crates/nanobot-core/: Cargo.toml
crates/nanobot-core/src/: lib.rs
crates/nanobot-core/src/agent/: agent_loop.rs  context.rs  skills.rs
crates/nanobot-core/src/bus/: events.rs  queue.rs
crates/nanobot-core/src/channels/: manager.rs  mod.rs  telegram.rs  traits.rs  whatsapp.rs
crates/nanobot-core/src/config/: factory.rs  loader.rs  mod.rs  schema.rs
crates/nanobot-core/src/cron/: service.rs
crates/nanobot-core/src/providers/: mod.rs  traits.rs
crates/nanobot-core/src/session/: manager.rs
crates/nanobot-core/src/tools/: filesystem.rs  mod.rs  spawn.rs  web.rs
crates/nanobot-core/tests/: integration.rs
crates/rustoctopus-app/: Cargo.toml  tauri.conf.json
crates/rustoctopus-app/capabilities/: default.json
crates/rustoctopus-app/icons/: icon.icns
crates/rustoctopus-app/src/: main.rs  state.rs
crates/rustoctopus-app/src/commands/: channels.rs  config.rs  cron.rs  dashboard.rs  mcp.rs  mod.rs
crates/rustoctopus-app/ui/: index.html  package-lock.json  package.json
crates/rustoctopus-app/ui/src/: App.tsx
crates/rustoctopus-app/ui/src/components/: StatusCard.tsx
crates/rustoctopus-app/ui/src/lib/: invoke.ts
crates/rustoctopus-app/ui/src/views/: Channels.tsx  Config.tsx  Cron.tsx  Dashboard.tsx  Mcp.tsx
crates/rustoctopus-cli/: Cargo.toml
crates/rustoctopus-cli/src/: cmd_agent.rs  cmd_cron.rs  cmd_gateway.rs  cmd_onboard.rs  cmd_status.rs  main.rs
crates/rustoctopus-cli/tests/: cli_integration.rs
crates/rustoctopus-core/: Cargo.toml
crates/rustoctopus-core/src/: lib.rs
crates/rustoctopus-core/src/agent/: agent_loop.rs  context.rs  memory.rs  mod.rs  skills.rs  subagent.rs
crates/rustoctopus-core/src/bus/: mod.rs
crates/rustoctopus-core/src/channels/: feishu.rs  telegram.rs  whatsapp.rs
crates/rustoctopus-core/src/config/: factory.rs  loader.rs  mod.rs  schema.rs
crates/rustoctopus-core/src/cron/: mod.rs  types.rs
crates/rustoctopus-core/src/mcp/: manager.rs
crates/rustoctopus-core/src/providers/: openai_compat.rs  registry.rs
crates/rustoctopus-core/src/session/: mod.rs
crates/rustoctopus-core/src/tools/: cron_tool.rs  mcp_tool.rs  message.rs  mod.rs  registry.rs  shell.rs  traits.rs  web.rs
crates/rustoctopus-core/tests/: integration.rs
docs/plans/: 2026-02-24-mcp-integration-design.md  2026-02-24-nanobot-rust-phase1.md  2026-02-24-nanobot-rust-phase2.md  2026-02-24-nanobot-rust-port-design.md  2026-02-24-tauri-gui-design.md  2026-02-24-tauri-gui-phase3.md  2026-02-24-whatsapp-channel-design.md  2026-02-24-whatsapp-channel-plan.md  2026-02-25-mcp-integration.md
