[workspace]
resolver = "2"
members = ["crates/nanobot-core", "crates/nanobot-cli"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
regex = "1"
uuid = { version = "1", features = ["v4"] }
glob = "0.3"
thiserror = "2"
anyhow = "1"
dirs = "6"
cron = "0.15"
