[package]
name = "nanobot-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nanobot"
path = "src/main.rs"

[dependencies]
nanobot-core = { path = "../nanobot-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
rustyline = "15"

[features]
default = ["whatsapp"]
whatsapp = ["nanobot-core/whatsapp"]

[dev-dependencies]
tempfile = "3"
async-trait = { workspace = true }
