[package]
name = "rustoctopus-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "roc"
path = "src/main.rs"

[dependencies]
rustoctopus-core = { path = "../rustoctopus-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
rustyline = "15"

[features]
default = ["whatsapp"]
whatsapp = ["rustoctopus-core/whatsapp"]

[dev-dependencies]
tempfile = "3"
async-trait = { workspace = true }
