[package]
name = "rustoctopus-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true }
glob = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
cron = { workspace = true }
teloxide = { version = "0.13", features = ["macros"], optional = true }
tokio-tungstenite = { version = "0.24", features = ["native-tls"], optional = true }
url = { version = "2", optional = true }
futures-util = { version = "0.3", optional = true }

[features]
default = ["telegram", "feishu", "whatsapp"]
telegram = ["dep:teloxide"]
feishu = ["dep:tokio-tungstenite", "dep:url", "dep:futures-util"]
whatsapp = ["dep:tokio-tungstenite", "dep:url", "dep:futures-util"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
